# jacob-rosa-ttb-label-verification

./: .env.example  .gitignore  AGENTS.md  README.md  render.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: comparison.py  extraction_prompt.py  main.py  models.py  run_vision_demo.py  vision_service.py
backend/frontend/: batch.html  index.html
backend/scripts/: benchmark_live.py  smoke_live.py
backend/tests/: __init__.py  frontend_smoke_runner.js  test_benchmark_live.py  test_comparison.py  test_frontend_smoke.py  test_main.py  test_models.py  test_smoke_live.py  test_vision_service.py
frontend/: index.html
